--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/Hedvig.Theme"
+            android:theme="@style/Hedvig.Theme.Chat"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".SplashActivity"
