Implement missing action
Still missing copy but I'll set that up

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -213,6 +213,7 @@ dependencies {
     androidTestImplementation "com.apollographql.apollo:apollo-idling-resource:$apollo_version"
     androidTestImplementation 'org.awaitility:awaitility:3.1.6'
     androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.6'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 }
