--- a/app/build.gradle
+++ b/app/build.gradle
@@ -209,6 +209,7 @@ dependencies {
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.1.12'
     androidTestImplementation "com.apollographql.apollo:apollo-idling-resource:$apollo_version"
     androidTestImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.22'
+    androidTestImplementation "org.koin:koin-test:$koin_version"
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 }
