--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
         jvmTarget = "1.8"
     }
 
+    packagingOptions {
+        exclude "javamoney.properties"
+    }
+
     buildTypes {
         release {
             applicationIdSuffix '.app'
@@ -198,6 +202,9 @@ dependencies {
 
     // adyen
     implementation 'com.adyen.checkout:drop-in:3.6.4'
+
+    // JSR-354
+    implementation 'org.javamoney:moneta:1.3'
 
     // test
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
