--- a/app/build.gradle
+++ b/app/build.gradle
@@ -206,6 +206,9 @@ dependencies {
     // JSR-354
     implementation 'org.javamoney:moneta:1.3'
 
+    // shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     // test
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
