--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:label="View Gallery"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".NotificationsActivity"
+            android:label="Notifications"
+            android:theme="@style/Hedvig.Theme" />
+
     </application>
 
 </manifest>
