--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ android {
 }
 
 dependencies {
+    implementation project(':apollo')
+   
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'nl.littlerobots.rxlint:rxlint:1.7.3'
