Migrate the test data builders to their own module and make them available for androidTest and debug
Voila!

--- a/apollo/build.gradle
+++ b/apollo/build.gradle
@@ -38,8 +38,11 @@ android {
         release {}
     }
 }
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+   
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Apollo
     api "com.apollographql.apollo:apollo-runtime:$apollo_version"
