--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:theme="@style/Hedvig.Theme" />
 
         <activity
+            android:name=".feature.referrals.ReferralsMockActivity"
+            android:label="Referrals Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
+        <activity
             android:name=".NotificationsActivity"
             android:label="Notifications"
             android:theme="@style/Hedvig.Theme" />
