--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,8 @@ android {
 dependencies {
     implementation project(':apollo')
 
-    androidTestImplementation project(':testdatabuilders')
-    debugImplementation project(':testdatabuilders')
+    androidTestImplementation project(':testdata')
+    debugImplementation project(':testdata')
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
