Add a screen where we can test out sending the chat message received-notification

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:label="Referrals Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".feature.chat.ChatMockActivity"
+            android:label="Chat Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
     </application>
 
 </manifest>
