--- a/apollo/build.gradle
+++ b/apollo/build.gradle
@@ -41,7 +41,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-   
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Apollo
@@ -49,7 +49,7 @@ dependencies {
     api "com.apollographql.apollo:apollo-android-support:$apollo_version"
 
     // ThreeTen
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
+    api 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     // adyen
     implementation 'com.adyen.checkout:drop-in:3.6.4'
