--- a/apollo/build.gradle
+++ b/apollo/build.gradle
@@ -6,7 +6,7 @@ apollo {
     generateKotlinModels = true
     customTypeMapping = [
             "URL"                   : "kotlin.String",
-            "LocalDate"             : "org.threeten.bp.LocalDate",
+            "LocalDate"             : "java.time.LocalDate",
             "Upload"                : "com.apollographql.apollo.api.FileUpload",
             "PaymentMethodsResponse": "com.adyen.checkout.base.model.PaymentMethodsApiResponse",
             "CheckoutPaymentsAction": "kotlin.String"
@@ -41,15 +41,12 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-   
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Apollo
     api "com.apollographql.apollo:apollo-runtime:$apollo_version"
     api "com.apollographql.apollo:apollo-android-support:$apollo_version"
-
-    // ThreeTen
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     // adyen
     implementation 'com.adyen.checkout:drop-in:3.6.4'
