--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ apollo {
     generateKotlinModels = true
     customTypeMapping = [
             "URL"                   : "kotlin.String",
-            "LocalDate"             : "org.threeten.bp.LocalDate",
+            "LocalDate"             : "java.time.LocalDate",
             "Upload"                : "com.apollographql.apollo.api.FileUpload",
             "PaymentMethodsResponse": "com.adyen.checkout.base.model.PaymentMethodsApiResponse",
             "CheckoutPaymentsAction": "kotlin.String"
@@ -43,6 +43,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -109,6 +110,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'nl.littlerobots.rxlint:rxlint:1.7.3'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // AndroidX
@@ -169,8 +172,6 @@ dependencies {
 
     // Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.10.3'
-
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
