--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.0"
     implementation 'com.google.android:flexbox:2.0.1'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     // Android lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
