--- a/app/build.gradle
+++ b/app/build.gradle
@@ -211,6 +211,8 @@ dependencies {
     androidTestImplementation "com.apollographql.apollo:apollo-idling-resource:$apollo_version"
     androidTestImplementation 'com.willowtreeapps.assertk:assertk-jvm:0.22'
     androidTestImplementation "org.koin:koin-test:$koin_version"
+    androidTestImplementation 'org.awaitility:awaitility:3.1.6'
+    androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.6'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 }
