--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,6 +163,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
 
+    // ReactiveX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+
     // Svg
     implementation 'com.caverock:androidsvg-aar:1.4'
 
