- Start using `EmbarkLinkFragment` - Create a Mock Screen for Embark

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:label="Chat Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".feature.embark.EmbarkMockActivity"
+            android:label="Embark Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
     </application>
 
 </manifest>
