Start using `ViewBinding` for `LoggedInActivity`
Also add a basic test to ensure that stuff works in future

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
     androidExtensions {
         experimental = true
     }
+    buildFeatures {
+        viewBinding true
+    }
     compileSdkVersion 29
 
     defaultConfig {
