Base-level implementation of the home tab
- Home tab is now shown by default instead of the old insurance tab
- If all contracts are pending, show a Big Text item (copy pending)
- Test and mock-infra for Home tab are in place

Also included:

- Ergonomic `viewBinding`-delegates
- A type-safe builder for `GenericDevelopmentAdapter`

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:label="Offer Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".feature.home.HomeMockActivity"
+            android:label="Home Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
     </application>
 
 </manifest>
