--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,6 +194,9 @@ dependencies {
         transitive = false
     }
 
+    //Tooltip
+    implementation 'com.github.florent37:viewtooltip:1.2.2'
+
     //facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
 
