--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ licenseReport {
     copyHtmlReportToAssets = true
 }
 
+apply plugin: 'com.starter.easylauncher'
+
 android {
     androidExtensions {
         experimental = true
