--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         classpath 'com.jaredsburrows:gradle-license-plugin:0.8.42'
         classpath 'com.github.likandr:lokalise-plugin:1.3'
         classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.11.1"
+        classpath "com.project.starter:easylauncher:3.3.0"
     }
 }
 
