--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,10 +117,10 @@ dependencies {
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.media:media:1.1.0'
+    implementation 'androidx.media:media:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
     implementation "androidx.preference:preference-ktx:1.1.1"
     implementation "androidx.core:core-ktx:1.3.1"
@@ -147,9 +147,9 @@ dependencies {
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.8.0"
 
     // Firebase
-    implementation 'com.google.android.gms:play-services-base:17.3.0'
-    releaseImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    stagingImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.android.gms:play-services-base:17.4.0'
+    releaseImplementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    stagingImplementation 'com.google.firebase:firebase-crashlytics:17.2.1'
 
     implementation "com.google.firebase:firebase-dynamic-links:19.1.0"
     implementation 'com.google.firebase:firebase-config:19.2.0'
@@ -177,8 +177,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.10.3'
 
     // coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4'
 
     // ReactiveX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -220,12 +220,12 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     // test
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
     androidTestImplementation 'com.agoda.kakao:kakao:2.3.2'
     androidTestImplementation 'org.powermock:powermock-core:2.0.6'
     androidTestImplementation "com.apollographql.apollo:apollo-idling-resource:$apollo_version"
