--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,9 +142,9 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
     // Okhttp
-    def okhttp3_version = '4.7.2'
+    def okhttp3_version = '4.9.0'
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
-    androidTestImplementation "com.squareup.okhttp3:mockwebserver:4.8.0"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
 
     // Firebase
     implementation 'com.google.android.gms:play-services-base:17.4.0'
@@ -158,7 +158,7 @@ dependencies {
     implementation "com.mixpanel.android:mixpanel-android:5.8.4"
 
     // Koin
-    def koin_version = "2.1.5"
+    def koin_version = "2.2.0-beta-1"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
