--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,11 +121,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.media:media:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.core:core-ktx:1.3.2"
     implementation 'com.google.android:flexbox:2.0.1'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
@@ -151,17 +151,17 @@ dependencies {
 
     // Firebase
     implementation 'com.google.android.gms:play-services-base:17.4.0'
-    releaseImplementation 'com.google.firebase:firebase-crashlytics:17.2.1'
-    stagingImplementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    releaseImplementation 'com.google.firebase:firebase-crashlytics:17.2.2'
+    stagingImplementation 'com.google.firebase:firebase-crashlytics:17.2.2'
 
-    implementation "com.google.firebase:firebase-dynamic-links:19.1.0"
+    implementation "com.google.firebase:firebase-dynamic-links:19.1.1"
     implementation 'com.google.firebase:firebase-config:19.2.0'
-    implementation "com.google.firebase:firebase-messaging:20.2.4"
+    implementation "com.google.firebase:firebase-messaging:20.3.0"
 
     implementation "com.mixpanel.android:mixpanel-android:5.8.4"
 
     // Koin
-    def koin_version = "2.2.0-beta-1"
+    def koin_version = "2.2.0-rc-2"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
