--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,14 @@ buildscript {
         mavenCentral()
         mavenLocal()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
         gradlePluginPortal()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'io.fabric.tools:gradle:1.30.0'
         classpath "com.apollographql.apollo:apollo-gradle-plugin:$apollo_version"
         classpath 'com.jaredsburrows:gradle-license-plugin:0.8.42'
         classpath 'com.github.likandr:lokalise-plugin:1.3'
