--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:theme="@style/Hedvig.Theme"
         android:name=".HedvigApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/APP_NAME"
-        android:largeHeap="true">
+        android:largeHeap="true"
+        android:theme="@style/Hedvig.Theme">
+        <activity android:name=".feature.denmark.DanishAuthenticationActivity"></activity>
         <activity
             android:name=".feature.keygear.KeyGearValuationInfoActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -222,7 +223,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme.KeyGear"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.webonboarding.WebOnboardingActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -230,7 +230,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.norway.NorwegianAuthenticationActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -238,7 +237,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.insurance.ui.contractdetail.ContractDetailActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -246,7 +244,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.insurance.ui.contractcoverage.ContractCoverageActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -254,7 +251,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.marketing.ui.MarketingActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -268,14 +264,12 @@
             android:launchMode="singleTask"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.referrals.ui.ReferralsInformationActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".feature.referrals.ui.editcode.ReferralsEditCodeActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -314,7 +308,6 @@
         <service
             android:name=".feature.adyen.AdyenDropInService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
-
     </application>
 
 </manifest>
