--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -52,5 +52,7 @@ jobs:
       - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: 30
+          target: google_apis
+          profile: pixel_3a
           script: ./gradlew connectedDebugAndroidTest
