--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -55,4 +55,5 @@ jobs:
           api-level: 30
           target: google_apis
           profile: pixel_3a
+          disable-animations: false
           script: ./gradlew connectedDebugAndroidTest
